--- a/FoCS_new.ipynb
+++ b/FoCS_new.ipynb
@@ -34,6 +34,9 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import itertools\n",
+    "import time\n",
+    "\n",
+    "start_time = time.time()\n",
     "\n",
     "df_loan_lenders = pd.read_csv('kiva-kaggle/loans_lenders.csv')\n",
     "df_loan_lenders_original = df_loan_lenders"
@@ -184,7 +187,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 3.33 s\n"
+      "Wall time: 3.44 s\n"
      ]
     }
    ],
@@ -217,7 +220,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 1.77 s\n"
+      "Wall time: 1.79 s\n"
      ]
     }
    ],
@@ -236,7 +239,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 5.32 s\n"
+      "Wall time: 5.55 s\n"
      ]
     }
    ],
@@ -394,7 +397,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 10.5 s\n"
+      "Wall time: 10.4 s\n"
      ]
     },
     {
@@ -557,7 +560,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 9.29 s\n"
+      "Wall time: 9.31 s\n"
      ]
     },
     {
@@ -887,20 +890,7 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\marco\\Anaconda3\\lib\\site-packages\\pandas\\core\\generic.py:5208: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  self[name] = value\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#FIXING DF_LOANS\n",
     "#it should be fixed applying a function to the dataset that will set a 'NA' value where a null value is found\n",
@@ -909,8 +899,8 @@
     "#Vectorized operations are more optimized then the apply.\n",
     "\n",
     "df_namibia = df_loans[df_loans[\"country_code\"].isnull()]\n",
-    "df_namibia.country_code = ['NA'] * len(df_namibia)\n",
-    "df_loans = df_loans[df_loans[\"country_code\"].notnull()].append(df_namibia)"
+    "df_namibia = df_namibia.assign(country_code=['NA'] * len(df_namibia))\n",
+    "df_loans = pd.concat([df_loans[df_loans[\"country_code\"].notnull()], df_namibia])"
    ]
   },
   {
@@ -922,7 +912,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 254 ms\n"
+      "Wall time: 240 ms\n"
      ]
     },
     {
@@ -1093,7 +1083,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 221 ms\n"
+      "Wall time: 228 ms\n"
      ]
     },
     {
@@ -4316,7 +4306,13 @@
       "C:\\Users\\marco\\Anaconda3\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3326: FutureWarning: Converting timezone-aware DatetimeArray to timezone-naive ndarray with 'datetime64[ns]' dtype. In the future, this will return an ndarray with 'object' dtype where each element is a 'pandas.Timestamp' with the correct 'tz'.\n",
       "\tTo accept the future behavior, pass 'dtype=object'.\n",
       "\tTo keep the old behavior, pass 'dtype=\"datetime64[ns]\"'.\n",
-      "  exec(code_obj, self.user_global_ns, self.user_ns)\n"
+      "  exec(code_obj, self.user_global_ns, self.user_ns)\n",
+      "C:\\Users\\marco\\Anaconda3\\lib\\site-packages\\pandas\\core\\generic.py:5208: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  self[name] = value\n"
      ]
     },
     {
@@ -6860,7 +6856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6879,7 +6875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -7119,7 +7115,7 @@
        "[2349174 rows x 11 columns]"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7130,7 +7126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -7358,7 +7354,7 @@
        "[1419607 rows x 10 columns]"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7369,7 +7365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -7378,7 +7374,7 @@
        "array(['irregular', 'monthly', 'bullet', 'weekly'], dtype=object)"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7396,7 +7392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -7551,7 +7547,7 @@
        "[1387428 rows x 5 columns]"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7562,7 +7558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -7668,7 +7664,7 @@
        "[28293931 rows x 2 columns]"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7679,7 +7675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -7846,7 +7842,7 @@
        "[28293912 rows x 6 columns]"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7858,7 +7854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -7976,7 +7972,7 @@
        "[2459468 rows x 3 columns]"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7989,7 +7985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -8127,7 +8123,7 @@
        "[1383799 rows x 4 columns]"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8148,7 +8144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -8173,7 +8169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -8185,7 +8181,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8197,7 +8193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -8328,7 +8324,7 @@
        "[504660 rows x 3 columns]"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8339,7 +8335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -8438,7 +8434,7 @@
        "[80186 rows x 1 columns]"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8451,7 +8447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -8509,7 +8505,7 @@
        "4509528                 11          6        1666.666667  "
       ]
      },
-     "execution_count": 127,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8527,7 +8523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -8650,7 +8646,7 @@
        "3348804          125.0                 12         14           8.928571  "
       ]
      },
-     "execution_count": 128,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8677,7 +8673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -8807,7 +8803,7 @@
        "[1416794 rows x 4 columns]"
       ]
      },
-     "execution_count": 150,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8822,7 +8818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -8940,7 +8936,7 @@
        "[145 rows x 3 columns]"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8953,7 +8949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -9001,7 +8997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -9175,7 +9171,7 @@
        "173            Kosovo  "
       ]
      },
-     "execution_count": 175,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9186,7 +9182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -9316,7 +9312,7 @@
        "[168 rows x 4 columns]"
       ]
      },
-     "execution_count": 176,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9328,7 +9324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -9483,7 +9479,7 @@
        "[168 rows x 5 columns]"
       ]
      },
-     "execution_count": 177,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9494,11 +9490,29 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# END OF MANDATORY EXERCISES"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NOTEBOOK EXECUTION TIME: 149.12610840797424\n"
+     ]
+    }
+   ],
+   "source": [
+    "end_time = time.time()\n",
+    "print(\"NOTEBOOK EXECUTION TIME: \" + str(end_time - start_time) + \" seconds.\")"
+   ]
   }
  ],
  "metadata": {
