Fixed country_code problem in Prob 4. Updated commenting

--- a/FoCS_new.ipynb
+++ b/FoCS_new.ipynb
@@ -4,13 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <a class=\"anchor\" id=\"main\">FoCS Lab</a>\n",
+    "## <a class=\"anchor\" id=\"main\">FoCS Project on Kiva lending dataset</a>\n",
     "### Contributors: Marco Distrutti, Santosh Anand\n",
     "\n",
     "* [1 Normalization of loan_lenders table](#normalize)\n",
     "* [2 Loan duration](#duration)\n",
     "* [3 Lenders who have funded at least twice](#search-lenders)\n",
-    "* [4 How many loans](#borrowers)\n",
+    "* [4 Number of borrwed loans by country](#borrowers)\n",
     "* [5 Overall amount](#overall-amount)\n",
     "* [6 Overall percentage](#overall-percentage)\n",
     "* [7 Overall by country/year](#year-overall-percentage)\n",
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "metadata": {
     "scrolled": true
    },
@@ -155,7 +155,7 @@
        "[1387432 rows x 2 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,15 +183,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 2.96 s, sys: 593 ms, total: 3.56 s\n",
-      "Wall time: 3.88 s\n"
+      "CPU times: user 3.33 s, sys: 3.95 s, total: 7.28 s\n",
+      "Wall time: 10.5 s\n"
      ]
     }
    ],
@@ -204,15 +204,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 180 ms, sys: 39.3 ms, total: 220 ms\n",
-      "Wall time: 326 ms\n"
+      "CPU times: user 200 ms, sys: 186 ms, total: 386 ms\n",
+      "Wall time: 640 ms\n"
      ]
     }
    ],
@@ -225,15 +225,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1.98 s, sys: 21.2 ms, total: 2 s\n",
-      "Wall time: 2.08 s\n"
+      "CPU times: user 2.42 s, sys: 555 ms, total: 2.97 s\n",
+      "Wall time: 3.66 s\n"
      ]
     }
    ],
@@ -246,15 +246,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 5.55 s, sys: 1.73 s, total: 7.28 s\n",
-      "Wall time: 8.46 s\n"
+      "CPU times: user 7.38 s, sys: 3.88 s, total: 11.3 s\n",
+      "Wall time: 15.8 s\n"
      ]
     }
    ],
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +374,7 @@
        "[28293931 rows x 2 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -405,15 +405,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 8.65 s, sys: 1.2 s, total: 9.85 s\n",
-      "Wall time: 10.3 s\n"
+      "CPU times: user 9.04 s, sys: 1.14 s, total: 10.2 s\n",
+      "Wall time: 11.1 s\n"
      ]
     },
     {
@@ -531,7 +531,7 @@
        "[1419607 rows x 3 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -569,15 +569,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 9.81 s, sys: 3.68 s, total: 13.5 s\n",
-      "Wall time: 15.6 s\n"
+      "CPU times: user 10.9 s, sys: 2.61 s, total: 13.5 s\n",
+      "Wall time: 16.6 s\n"
      ]
     },
     {
@@ -676,7 +676,7 @@
        "[901811 rows x 1 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -693,7 +693,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4 <a class=\"anchor\" id=\"borrowers\">How many loans</a>\n",
+    "## 4 <a class=\"anchor\" id=\"borrowers\">Number of borrwed loans by country</a>\n",
     "#### For each country, compute how many loans have involved that country as borrowers.\n",
     "[⇑ index](#main)"
    ]
@@ -702,12 +702,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There is a problem with Namibia country, in all records corresponding to this Country we haven't the **country_code**, I take this opportunity to upload country data but we noticed that even from country_stats.csv Namibia has null value in **country_code**. So we decided to force the setting of Namibia iso 2chars code to 'NA' in order to have consistent data in the original **df_loans** dataset."
+    "We found that the **country_code of Namibia is missing.**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -808,7 +808,7 @@
        "1415763  1068167          NaN      Namibia"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -818,8 +818,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In all the records corresponding to this country, we haven't got the country_code. \n",
+    "\n",
+    "We cheked the country-table but we noticed that **even from the country_stats.csv table, Namibia has null value for country_code**. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -893,7 +902,7 @@
        "115           Namibia  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -904,16 +913,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So **we decided to impute the country_code of Namibia as \"NA\" based on its 2char ISO country-code** in order to have consistent country_codes in the original df_loans dataset."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#FIXING DF_LOANS\n",
-    "#it should be fixed applying a function to the dataset that will set a 'NA' value where a null value is found\n",
-    "#but we found this two step solution (divide two subsets and append them again) very faster against the apply function\n",
+    "# FIXING DF_LOANS: Impute country code of Namibia as \"NA\"\n",
+    "# It should be fixed by replacing all the null values to \"NA\", which is the imputed country code for Namibia.\n",
     "\n",
-    "#Vectorized operations are more optimized then the apply.\n",
+    "# We could have used apply function here.\n",
+    "# But we found that a two step solution (divide two subsets and concatenate them again) faster compared to the apply function\n",
+    "# Vectorized operations are more optimized than the apply function.\n",
     "\n",
     "df_namibia = df_loans[df_loans[\"country_code\"].isnull()]\n",
     "df_namibia = df_namibia.assign(country_code=['NA'] * len(df_namibia))\n",
@@ -922,15 +939,144 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>country_code</th>\n",
+       "      <th>country_name</th>\n",
+       "      <th>loan_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>PH</td>\n",
+       "      <td>Philippines</td>\n",
+       "      <td>657307</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>HN</td>\n",
+       "      <td>Honduras</td>\n",
+       "      <td>657259</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>PK</td>\n",
+       "      <td>Pakistan</td>\n",
+       "      <td>658010</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>KG</td>\n",
+       "      <td>Kyrgyzstan</td>\n",
+       "      <td>659347</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>PH</td>\n",
+       "      <td>Philippines</td>\n",
+       "      <td>656933</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>971827</th>\n",
+       "      <td>NA</td>\n",
+       "      <td>Namibia</td>\n",
+       "      <td>998555</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1134818</th>\n",
+       "      <td>NA</td>\n",
+       "      <td>Namibia</td>\n",
+       "      <td>1147866</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1214923</th>\n",
+       "      <td>NA</td>\n",
+       "      <td>Namibia</td>\n",
+       "      <td>851368</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1281022</th>\n",
+       "      <td>NA</td>\n",
+       "      <td>Namibia</td>\n",
+       "      <td>1147852</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1415763</th>\n",
+       "      <td>NA</td>\n",
+       "      <td>Namibia</td>\n",
+       "      <td>1068167</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1419607 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        country_code country_name  loan_id\n",
+       "0                 PH  Philippines   657307\n",
+       "1                 HN     Honduras   657259\n",
+       "2                 PK     Pakistan   658010\n",
+       "3                 KG   Kyrgyzstan   659347\n",
+       "4                 PH  Philippines   656933\n",
+       "...              ...          ...      ...\n",
+       "971827            NA      Namibia   998555\n",
+       "1134818           NA      Namibia  1147866\n",
+       "1214923           NA      Namibia   851368\n",
+       "1281022           NA      Namibia  1147852\n",
+       "1415763           NA      Namibia  1068167\n",
+       "\n",
+       "[1419607 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_loans[['country_code', 'country_name', 'loan_id']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 178 ms, sys: 33.2 ms, total: 211 ms\n",
-      "Wall time: 214 ms\n"
+      "CPU times: user 164 ms, sys: 17.7 ms, total: 182 ms\n",
+      "Wall time: 195 ms\n"
      ]
     },
     {
@@ -954,102 +1100,108 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>country_code</th>\n",
-       "      <th>borrows</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>country_name</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
+       "      <th>country_code</th>\n",
+       "      <th>n_loansBorrowed</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>Mauritania</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Papua New Guinea</th>\n",
-       "      <td>1</td>\n",
+       "      <th>50</th>\n",
+       "      <td>Mauritania</td>\n",
+       "      <td>MR</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Uruguay</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Botswana</th>\n",
-       "      <td>1</td>\n",
+       "      <th>63</th>\n",
+       "      <td>Papua New Guinea</td>\n",
+       "      <td>PG</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Canada</th>\n",
+       "      <th>89</th>\n",
+       "      <td>Uruguay</td>\n",
+       "      <td>UY</td>\n",
        "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Botswana</td>\n",
+       "      <td>BW</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>Canada</td>\n",
+       "      <td>CA</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>El Salvador</th>\n",
+       "      <th>27</th>\n",
+       "      <td>El Salvador</td>\n",
+       "      <td>SV</td>\n",
        "      <td>64037</td>\n",
-       "      <td>64037</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Cambodia</th>\n",
+       "      <th>14</th>\n",
+       "      <td>Cambodia</td>\n",
+       "      <td>KH</td>\n",
        "      <td>79701</td>\n",
-       "      <td>79701</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Peru</th>\n",
+       "      <th>65</th>\n",
+       "      <td>Peru</td>\n",
+       "      <td>PE</td>\n",
        "      <td>86000</td>\n",
-       "      <td>86000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Kenya</th>\n",
-       "      <td>143699</td>\n",
+       "      <th>40</th>\n",
+       "      <td>Kenya</td>\n",
+       "      <td>KE</td>\n",
        "      <td>143699</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Philippines</th>\n",
-       "      <td>285336</td>\n",
+       "      <th>66</th>\n",
+       "      <td>Philippines</td>\n",
+       "      <td>PH</td>\n",
        "      <td>285336</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>96 rows × 2 columns</p>\n",
+       "<p>96 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                  country_code  borrows\n",
-       "country_name                           \n",
-       "Mauritania                   1        1\n",
-       "Papua New Guinea             1        1\n",
-       "Uruguay                      1        1\n",
-       "Botswana                     1        1\n",
-       "Canada                       1        1\n",
-       "...                        ...      ...\n",
-       "El Salvador              64037    64037\n",
-       "Cambodia                 79701    79701\n",
-       "Peru                     86000    86000\n",
-       "Kenya                   143699   143699\n",
-       "Philippines             285336   285336\n",
+       "        country_name country_code  n_loansBorrowed\n",
+       "50        Mauritania           MR                1\n",
+       "63  Papua New Guinea           PG                1\n",
+       "89           Uruguay           UY                1\n",
+       "9           Botswana           BW                1\n",
+       "16            Canada           CA                1\n",
+       "..               ...          ...              ...\n",
+       "27       El Salvador           SV            64037\n",
+       "14          Cambodia           KH            79701\n",
+       "65              Peru           PE            86000\n",
+       "40             Kenya           KE           143699\n",
+       "66       Philippines           PH           285336\n",
        "\n",
-       "[96 rows x 2 columns]"
+       "[96 rows x 3 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "%%time\n",
-    "df_countries_borrows = df_loans[['country_code', 'country_name', 'loan_id']].groupby(['country_name']).count().rename(columns={\"loan_id\": \"borrows\"}).sort_values(by=[\"borrows\"])\n",
+    "df_countries_borrows = df_loans[['country_code', 'country_name', 'loan_id']].groupby(['country_name','country_code' ]).count().reset_index().rename(columns={\"loan_id\": \"n_loansBorrowed\"}).sort_values(by=[\"n_loansBorrowed\"])\n",
     "df_countries_borrows"
    ]
   },
@@ -11125,7 +11277,9 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
