Prob 5+6. Updated clearer column names in output. Updated commenting

--- a/FoCS_new.ipynb
+++ b/FoCS_new.ipynb
@@ -11,8 +11,8 @@
     "* [2 Loan duration](#duration)\n",
     "* [3 Lenders who have funded at least twice](#search-lenders)\n",
     "* [4 Number of borrwed loans by country](#borrowers)\n",
-    "* [5 Overall amount](#overall-amount)\n",
-    "* [6 Overall percentage](#overall-percentage)\n",
+    "* [5 Overall amount borrowed by each country](#overall-amount)\n",
+    "* [6 Overall percent of amount borrowed by each country](#overall-percentage)\n",
     "* [7 Overall by country/year](#year-overall-percentage)\n",
     "* [8 Lenders overall](#lenders-overall)\n",
     "* [9 Country, lent vs borrowed](#country-lent-borrowed)\n",
@@ -1209,7 +1209,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5 <a class=\"anchor\" id=\"overall-amount\">Overall amount</a>\n",
+    "## 5 <a class=\"anchor\" id=\"overall-amount\">Overall amount borrowed by each country</a>\n",
     "#### For each country, compute the overall amount of money borrowed\n",
     "[⇑ index](#main)"
    ]
@@ -1218,12 +1218,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We noticed that funded_amount is different then loan_amount (in some cases it could be higher) and for that reason we consider the funded_amount as the borrowed amont, and when is higher then the loan_amount (12 times) it is considered as an over funding."
+    "We noticed that the **funded_amount is different from loan_amount. It is usually lower than the loan_amount, however it is even higher than loan_amount in some cases. For this reason we consider the funded_amount as the borrowed amont, and when is higher than the loan_amount (12 times) it is considered as over-funding of the loan.**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1246,17 +1246,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 186 ms, sys: 39.3 ms, total: 226 ms\n",
-      "Wall time: 262 ms\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -1372,13 +1364,12 @@
        "[96 rows x 3 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "%%time\n",
     "df_countries_borrowed = df_loans[['country_code', 'country_name', 'funded_amount']].groupby(['country_code', 'country_name'], as_index=False).sum().rename(columns={\"funded_amount\": \"borrowed\"}).sort_values(by=[\"borrowed\"])\n",
     "df_countries_borrowed"
    ]
@@ -1394,14 +1385,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6 <a class=\"anchor\" id=\"overall-amount\">Overall percentage</a>\n",
+    "## 6 <a class=\"anchor\" id=\"overall-percentage\">Overall percent of amount borrowed by each country</a>\n",
     "#### Like the previous point, but expressed as a percentage of the overall amount lent.\n",
     "[⇑ index](#main)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -1426,7 +1417,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>country_name</th>\n",
-       "      <th>borrowed</th>\n",
+       "      <th>borrowed_pc</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1491,33 +1482,32 @@
        "</div>"
       ],
       "text/plain": [
-       "      country_name  borrowed\n",
-       "87  Virgin Islands  0.000000\n",
-       "30            Gaza  0.000442\n",
-       "85         Uruguay  0.000708\n",
-       "12        Botswana  0.000708\n",
-       "29            Guam  0.000770\n",
-       "..             ...       ...\n",
-       "40        Cambodia  4.497442\n",
-       "66        Paraguay  4.752779\n",
-       "38           Kenya  5.631843\n",
-       "60            Peru  6.963708\n",
-       "62     Philippines  8.586728\n",
+       "      country_name  borrowed_pc\n",
+       "87  Virgin Islands     0.000000\n",
+       "30            Gaza     0.000442\n",
+       "85         Uruguay     0.000708\n",
+       "12        Botswana     0.000708\n",
+       "29            Guam     0.000770\n",
+       "..             ...          ...\n",
+       "40        Cambodia     4.497442\n",
+       "66        Paraguay     4.752779\n",
+       "38           Kenya     5.631843\n",
+       "60            Peru     6.963708\n",
+       "62     Philippines     8.586728\n",
        "\n",
        "[96 rows x 2 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "total_borrowed = df_countries_borrowed.borrowed.sum()\n",
-    "#vectorized operation\n",
     "total_borrowed_perc = (df_countries_borrowed.borrowed / total_borrowed) * 100\n",
     "\n",
-    "df_countries_borrowed_perc = pd.DataFrame({'country_name': df_countries_borrowed.country_name, 'borrowed':total_borrowed_perc})\n",
+    "df_countries_borrowed_perc = pd.DataFrame({'country_name': df_countries_borrowed.country_name, 'borrowed_pc':total_borrowed_perc})\n",
     "df_countries_borrowed_perc"
    ]
   },
