Prob 7+8. Updated descriptions and  commenting

--- a/FoCS_new.ipynb
+++ b/FoCS_new.ipynb
@@ -13,8 +13,8 @@
     "* [4 Number of borrwed loans by country](#borrowers)\n",
     "* [5 Overall amount borrowed by each country](#overall-amount)\n",
     "* [6 Overall percent of amount borrowed by each country](#overall-percentage)\n",
-    "* [7 Overall by country/year](#year-overall-percentage)\n",
-    "* [8 Lenders overall](#lenders-overall)\n",
+    "* [7 Overall amount borrowed by country/year](#year-overall-percentage)\n",
+    "* [8 Overall amount of money lent by each lender](#lenders-overall)\n",
     "* [9 Country, lent vs borrowed](#country-lent-borrowed)\n",
     "* [10 Country, Difference lent-borrowed in respect of population](#country-lent-borrowed-population)\n",
     "* [11 Country, Difference lent-borrowed in respect of population below poverty line](#country-lent-borrowed-population-line)\n",
@@ -1515,7 +1515,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 7 <a class=\"anchor\" id=\"year-overall-percentage\">Overall by country/year</a>\n",
+    "## 7 <a class=\"anchor\" id=\"year-overall-percentage\">Overall amount borrowed by country/year</a>\n",
     "#### Like the three previous points, but split for each year (with respect to disburse time).\n",
     "[⇑ index](#main)"
    ]
@@ -1524,12 +1524,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The following dataset is the grouped amount by **country_name** and **year**. For the same reason explained in Execise 5 ew will use the funded amount as borrowed amount."
+    "The following table contains the grouped amount by **country_name** and **year**. For the same reason explained in Problem 5, we will use the funded amount as borrowed amount."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -1647,7 +1647,7 @@
        "[748 rows x 3 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1671,7 +1671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -1792,7 +1792,7 @@
        "13  2018     771550.0"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1806,7 +1806,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 8 <a class=\"anchor\" id=\"lenders-overall\">Lenders overall</a>\n",
+    "## 8 <a class=\"anchor\" id=\"lenders-overall\">Overall amount of money lent by each lender</a>\n",
     "#### For each lender, compute the overall amount of money lent. For each loan that has more than one lender, you must assume that all lenders contributed the same amount.\n",
     "[⇑ index](#main)"
    ]
@@ -1815,12 +1815,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We have seen that **num_lenders_total**, that should represent the number of lenders in loan, is different from the real number of the lenders involved in datasets relationship. We can show here:"
+    "During our analysis, we noticed that ***num_lenders_total*, that should represent the number of lenders in *loans.csv* table, is different from the real number of the lenders that can be obtained from *loans_lenders.csv* table that represent the actual data of loans**. We can it show here:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -1950,13 +1950,13 @@
        "[1387428 rows x 4 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Show the difference explained\n",
+    "# Show that num_lenders_total is different from actual number of lenders\n",
     "\n",
     "df_loan_lenders_grouped = df_loan_lenders.groupby([\"loan_id\"]).count().rename(columns={\"lender\": \"n_lenders\"}).reset_index()\n",
     "df_loan_lenders_merged = df_loans.merge(df_loan_lenders_grouped)\n",
@@ -1966,7 +1966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -2121,14 +2121,13 @@
        "[1387428 rows x 5 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Add the funded_per_person column\n",
-    "\n",
+    "# For the above reason, we calculates funded_per_person using n_lenders caculated by us\n",
     "funded_per_person = df_loan_lenders_merged_subset.funded_amount / df_loan_lenders_merged_subset.n_lenders\n",
     "df_loan_lenders_merged_subset = df_loan_lenders_merged_subset.assign(funded_per_person = funded_per_person)\n",
     "df_loans_funded_per_person = df_loan_lenders_merged_subset #used in Exercise 13\n",
@@ -2137,7 +2136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -2243,12 +2242,15 @@
        "[1383799 rows x 2 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Next, we obtain the df_loan_lenders and merge it to df_loan_lenders_merged_subset\n",
+    "# This will allow us to get lenders and funded_per_person\n",
+    "# Thenafter, we'll groupby lenders and sum funded_per_person to get overall funded by each lender\n",
     "df_loan_lenders_merged_subset = df_loan_lenders_merged_subset[[\"loan_id\", \"funded_per_person\"]].set_index(\"loan_id\")\n",
     "df_lender_funds = pd.merge(df_loan_lenders, df_loan_lenders_merged_subset, on=\"loan_id\").drop(columns=[\"loan_id\"]).groupby(['lender']).sum()\n",
     "df_lender_funds = df_lender_funds.rename(columns={\"funded_per_person\": \"total_funded\"}).reset_index()\n",
