Prob 15-16. Updated descriptions  and  commenting

--- a/FoCS_new.ipynb
+++ b/FoCS_new.ipynb
@@ -9228,7 +9228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [
     {
@@ -9358,7 +9358,7 @@
        "[1416794 rows x 4 columns]"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 194,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9373,7 +9373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [
     {
@@ -9491,12 +9491,13 @@
        "[145 rows x 3 columns]"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 195,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "## Groupby year-month the total funded amount\n",
     "df_loans_month_year = df_loans_clusterized[[\"year\", \"month\", \"funded_amount\"]].groupby(by=[\"year\", \"month\"]).sum().rename(columns={\"funded_amount\": \"toal_funded_amount\"})\n",
     "df_loans_month_year = df_loans_month_year.reset_index()\n",
     "df_loans_month_year"
@@ -9504,7 +9505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [
     {
@@ -9521,6 +9522,9 @@
     }
    ],
    "source": [
+    "# We now do a scatter (bubble) plot to show the cluster of loans\n",
+    "# The size of the bubble is proportional to the amount of the loan\n",
+    "# The bubbles are colored according to the month of the year\n",
     "%matplotlib inline\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
@@ -9552,7 +9556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [
     {
@@ -9726,7 +9730,7 @@
        "173            Kosovo  "
       ]
      },
-     "execution_count": 81,
+     "execution_count": 197,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9737,7 +9741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [
     {
@@ -9867,7 +9871,7 @@
        "[168 rows x 4 columns]"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 198,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9879,7 +9883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [
     {
@@ -10034,7 +10038,7 @@
        "[168 rows x 5 columns]"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 199,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -10053,14 +10057,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "NOTEBOOK EXECUTION TIME: 221.2005000114441 seconds.\n"
+      "NOTEBOOK EXECUTION TIME: 11167.918785095215 seconds.\n"
      ]
     }
    ],
