Prob 17-18. Updated descriptions  and  commenting

--- a/FoCS_new.ipynb
+++ b/FoCS_new.ipynb
@@ -10091,7 +10091,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [
     {
@@ -10197,7 +10197,7 @@
        "[2349174 rows x 2 columns]"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 201,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -10208,7 +10208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [
     {
@@ -10346,7 +10346,7 @@
        "[1383799 rows x 4 columns]"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 202,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -10357,7 +10357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [
     {
@@ -10511,7 +10511,7 @@
        "[1383799 rows x 6 columns]"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 203,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -10523,7 +10523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [
     {
@@ -10677,12 +10677,13 @@
        "[1383799 rows x 6 columns]"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 204,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Fix the null values as 0\n",
     "df_lender_country_repayments.bullet = np.where(df_lender_country_repayments.bullet.isnull(), 0, df_lender_country_repayments.bullet)\n",
     "df_lender_country_repayments.irregular = np.where(df_lender_country_repayments.irregular.isnull(), 0, df_lender_country_repayments.irregular)\n",
     "df_lender_country_repayments.monthly = np.where(df_lender_country_repayments.monthly.isnull(), 0, df_lender_country_repayments.monthly)\n",
@@ -10692,7 +10693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [
     {
@@ -10830,19 +10831,20 @@
        "[234 rows x 4 columns]"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 205,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Group according to country code\n",
     "df_countries_per_repayment_interval_status = df_lender_country_repayments[[\"country_code\", \"bullet\", \"irregular\", \"monthly\", \"weekly\"]].groupby(by=[\"country_code\"]).sum()\n",
     "df_countries_per_repayment_interval_status"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [
     {
@@ -11007,12 +11009,13 @@
        "[234 rows x 5 columns]"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 206,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Total \n",
     "df_total_countries_repayments = df_countries_per_repayment_interval_status.bullet + df_countries_per_repayment_interval_status.irregular + df_countries_per_repayment_interval_status.monthly + df_countries_per_repayment_interval_status.weekly\n",
     "df_countries_per_repayment_interval_status = df_countries_per_repayment_interval_status.assign(total=df_total_countries_repayments)\n",
     "df_countries_per_repayment_interval_status"
@@ -11020,7 +11023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [
     {
@@ -11198,12 +11201,13 @@
        "[234 rows x 6 columns]"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 207,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# % of irregular loans\n",
     "irregular_pc = (df_countries_per_repayment_interval_status.irregular / df_countries_per_repayment_interval_status.total) * 100\n",
     "df_countries_per_repayment_interval_status = df_countries_per_repayment_interval_status.assign(irregular_percentage=irregular_pc)\n",
     "df_countries_per_repayment_interval_status.sort_values(by=[\"irregular_percentage\"], ascending=False)"
@@ -11222,12 +11226,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this exercise we considered the countries in respect of the borrowers, an information that we have already given from the df_loans dataset. In fact the countries of the lenders are in the df_lenders. So then, this is can be overtaken using a simple grouping by df_loans."
+    "In this exercise we considered the countries with respect to the borrowers. We have already this information from the df_loans dataset. In fact the countries of the lenders are in the df_lenders. So then, this can be calculated using a simple grouping by df_loans."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [
     {
@@ -11345,7 +11349,7 @@
        "[238 rows x 3 columns]"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 208,
      "metadata": {},
      "output_type": "execute_result"
     }
